public/css/custom.css
.hidden.menu {
  display: none;
}

.masthead.segment {
  min-height: 700px;
  padding: 1em 0em;
}

.masthead .logo.item img {
  margin-right: 1em;
}
.masthead .ui.menu .ui.button {
  margin-left: 0.5em;
}
.masthead h1.ui.header {
  margin-top: 3em;
  margin-bottom: 0em;
  font-size: 4em;
  font-weight: normal;
}
.masthead h2 {
  font-size: 1.7em;
  font-weight: normal;
}

.ui.vertical.stripe {
  padding: 8em 0em;
}
.ui.vertical.stripe h3 {
  font-size: 2em;
}
.ui.vertical.stripe .button + h3,
.ui.vertical.stripe p + h3 {
  margin-top: 3em;
}
.ui.vertical.stripe .floated.image {
  clear: both;
}
.ui.vertical.stripe p {
  font-size: 1.33em;
}
.ui.vertical.stripe .horizontal.divider {
  margin: 3em 0em;
}

.quote.stripe.segment {
  padding: 0em;
}
.quote.stripe.segment .grid .column {
  padding-top: 5em;
  padding-bottom: 5em;
}

.footer.segment {
  padding: 5em 0em;
}

.secondary.pointing.menu .toc.item {
  display: none;
}

@media only screen and (max-width: 700px) {
  .ui.fixed.menu {
    display: none !important;
  }
  .secondary.pointing.menu .item,
  .secondary.pointing.menu .menu {
    display: none;
  }
  .secondary.pointing.menu .toc.item {
    display: block;
  }
  .masthead.segment {
    min-height: 350px;
  }
  .masthead h1.ui.header {
    font-size: 2em;
    margin-top: 1.5em;
  }
  .masthead h2 {
    margin-top: 0.5em;
    font-size: 1.5em;
  }
}

body {
  background-color: #edf1f5;
}
body > .grid {
  height: 100%;
}
.image {
  margin-top: -100px;
}
.column {
  max-width: 450px;
}

.primary {
  color: orange;
}

// d3 charts

.label {
  font-size: 10px;
}
.chart-title {
  margin-left:0px;
  margin-bottom:5px;
  margin-top:10px;
  font-size:14px;
  font-weight: bold;
}
.chart rect {
  stroke-width:0;
  stroke: white;
}

.axis path,
.axis line {
  fill: none;
  stroke: black;
  shape-rendering: crispEdges;
}
.axis text {
  font-size: 11px;
}
.guideline {
  stroke: #444;
  stroke-width: 0.1;
}

.ui.push-top {
  margin-top: 5em;
}

.logo {
  height: 20px;
  width: 20px;
}

.svg-container {
    display: inline-block;
    position: relative;
    width: 100%;
    /*padding-bottom: 100%; /* aspect ratio */*/
    vertical-align: top;
    overflow: hidden;
}
.svg-content {
    display: inline-block;
    position: absolute;
    top: 10px;
    left: 0;
}

.ui.container {
  padding: 1em;
}

